Fix button line height clipping

--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,7 @@ body {
   will-change: box-shadow, transform;
   font-size: 18px;
   position: relative;
+  line-height: normal;
 }
 
 .button:focus {
